--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ myProgram/TestSet/
 myProgram/SAT_New/
 myProgram/UNSAT_New/
 myProgram/SAT_Osol/
+myProgram/testcasesForMLSat/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
