--- a/myProgram/C++/Makefile
+++ b/myProgram/C++/Makefile
@@ -7,3 +7,5 @@ get_SAT_UNSAT_examples: get_SAT_UNSAT_examples.cc
         g++ -o get_SAT_UNSAT_examples.out -std=c++11 get_SAT_UNSAT_examples.cc
 
 g++ -o createMinu1.out -std=c++11 createMinu1.cc
+
+g++ -o predictBackbone.out -std=c++11 predictBackbone.cc
